Ot_drawer: improve hack for preventing background scroll when a drawer is open on mobile devices
Now setting position:fixed and manually change top property

--- a/css/ot_drawer.css
+++ b/css/ot_drawer.css
@@ -1,5 +1,12 @@
 /* Generic drawer stylesheet. */
 
+html.ot-drawer-open, html.ot-drawer-open > body {
+    overflow: hidden;
+    position: fixed ; /* To prevent scroll on mobile devices.
+                         One must also set top property manually
+                         to prevent scrolling page to top. */
+}
+
 /* .ot-dr-container.open .ot-dr-toggle-button { */
 /*     display: none; */
 /* } */
